[gd_scene load_steps=7 format=3 uid="uid://pv8fl8xtsev3"]

[ext_resource type="Script" path="res://scripts/custom_window.gd" id="1_5e6b5"]
[ext_resource type="Texture2D" uid="uid://ledm4d42k4gw" path="res://assets/sprites/UI/Window.png" id="2_itb6m"]
[ext_resource type="Texture2D" uid="uid://v1yndgqdjvqn" path="res://assets/sprites/UI/closebutton1.png" id="4_3fydx"]
[ext_resource type="Texture2D" uid="uid://didp57oeuptv7" path="res://assets/sprites/UI/closebutton2.png" id="5_1373w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bxta"]
size = Vector2(80.3125, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1d6r"]
size = Vector2(1200, 35)

[node name="CustomWindow" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_5e6b5")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 1200.0
offset_bottom = 800.0
texture = ExtResource("2_itb6m")
patch_margin_left = 19
patch_margin_top = 44
patch_margin_right = 20
patch_margin_bottom = 15
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = 5.0
offset_right = 56.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Make 24"
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1148.16, 62)
shape = SubResource("RectangleShape2D_8bxta")

[node name="DraggableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DraggableArea"]
position = Vector2(600, 19)
shape = SubResource("RectangleShape2D_k1d6r")

[node name="CloseButton" type="TextureButton" parent="."]
offset_left = 28.0
offset_top = 6.0
offset_right = 60.0
offset_bottom = 38.0
texture_normal = ExtResource("4_3fydx")
texture_pressed = ExtResource("5_1373w")
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="DraggableArea" to="." method="mouse_entered"]
[connection signal="mouse_exited" from="DraggableArea" to="." method="mouse_exited"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_pressed"]
